--- a/requirements.txt
+++ b/requirements.txt
@@ -1,194 +1,60 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-amqp==5.3.1
-annotated-types==0.7.0
-anyio==4.9.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-asttokens==3.0.0
-async-lru==2.0.5
-async-timeout==4.0.3
-attrs==25.3.0
-babel==2.17.0
-beautifulsoup4==4.13.4
-billiard==4.2.1
-bleach==6.2.0
-cachetools==5.5.2
-celery==5.5.3
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-class-registry==2.1.2
-click==8.2.1
-click-didyoumean==0.3.1
-click-plugins==1.1.1.2
-click-repl==0.3.0
-colorama==0.4.6
-comm==0.2.2
-cron-descriptor==1.4.5
-cryptography==45.0.5
-dataclasses-json==0.6.7
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-distlib==0.3.9
-distro==1.9.0
 Django==5.2.3
-django-appconf==1.1.0
-django-autocomplete-light==3.12.1
-django-celery-beat==2.8.1
-django-filter==25.1
-django-jazzmin==3.0.1
-django-rosetta==0.10.2
-django-select2==8.4.1
-django-timezone-field==7.1
-django-widget-tweaks==1.5.0
-et_xmlfile==2.0.0
-exceptiongroup==1.3.0
-executing==2.2.0
-fastjsonschema==2.21.1
-filelock==3.18.0
-filters==1.3.2
-filters-django==1.0.5
-fqdn==1.5.1
-frozenlist==1.7.0
-google-auth==2.40.3
-google-auth-oauthlib==1.2.2
-greenlet==3.2.4
-gspread==6.2.1
-h11==0.16.0
-httpcore==1.0.9
-httplib2==0.22.0
-httpx==0.28.1
-httpx-sse==0.4.1
-idna==3.10
-ipykernel==6.29.5
-ipython==8.37.0
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.6
-jiter==0.10.0
-joblib==1.5.1
-json5==0.12.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-kombu==5.5.4
-langchain==0.3.27
-langchain-community==0.3.27
-langchain-core==0.3.74
-langchain-openai==0.3.30
-langchain-text-splitters==0.3.9
-langsmith==0.4.14
-lxml==6.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib-inline==0.1.7
-mistune==3.1.3
-multidict==6.6.4
-mypy_extensions==1.1.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-nltk==3.9.1
-notebook==7.4.3
-notebook_shim==0.2.4
+gunicorn
+whitenoise
+psycopg2-binary
+redis
+celery
+django-celery-beat
+django-filter
+django-jazzmin
+django-rosetta
+django-select2
+django-timezone-field
+django-widget-tweaks
+
+# Data va ilmiy kutubxonalar
 numpy==1.26.4
-oauth2client==4.1.3
-oauthlib==3.3.1
-openai==1.99.9
-openpyxl==3.1.5
-orjson==3.11.2
-overrides==7.7.0
-packaging==25.0
-pandas==2.3.0
-pandocfilters==1.5.1
-parso==0.8.4
-pdf2image==1.17.0
-pdfminer.six==20250506
-pdfplumber==0.11.7
-pillow==11.3.0
-platformdirs==4.3.8
-polib==1.2.0
-prometheus_client==0.22.0
-prompt_toolkit==3.0.51
-propcache==0.3.2
-psutil==7.0.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-Pygments==2.19.1
-PyMuPDF==1.26.3
-pyparsing==3.2.3
-PyPDF2==3.0.1
-pypdfium2==4.30.0
-pytesseract==0.3.13
-python-crontab==3.3.0
-python-dateutil==2.9.0.post0
-python-docx==1.2.0
-python-dotenv==1.1.1
-python-json-logger==3.3.0
-pytz==2025.2
-pywinpty==2.0.15
-PyYAML==6.0.2
-pyzmq==26.4.0
-qrcode==8.2
-redis==5.2.1
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.25.1
-rsa==4.9.1
-scipy==1.15.3
-Send2Trash==1.8.3
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.7
-SQLAlchemy==2.0.43
-sqlparse==0.5.3
-stack-data==0.6.3
-tenacity==9.1.2
-terminado==0.18.1
-tiktoken==0.11.0
-tinycss2==1.4.0
-tomli==2.2.1
-tornado==6.5.1
-tqdm==4.67.1
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20250516
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.13.2
-tzdata==2025.2
-uri-template==1.3.0
-urllib3==2.4.0
-vine==5.1.0
-virtualenv==20.31.2
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-yarl==1.20.1
-zstandard==0.23.0
+pandas
+scipy
+
+# XML, PDF va image ishlash uchun
+lxml
+pillow
+pdf2image
+pdfminer.six
+pdfplumber
+PyPDF2
+pypdfium2
+PyMuPDF
+python-docx
+qrcode
+
+# OAuth va Google servislar
+google-auth
+google-auth-oauthlib
+gspread
+httplib2
+oauth2client
+oauthlib
+requests
+requests-oauthlib
+requests-toolbelt
+
+# LangChain va AI ishlatish uchun
+openai
+tiktoken
+langchain
+langchain-community
+langchain-core
+langchain-openai
+langchain-text-splitters
+langsmith
+
+# Qo‘shimcha foydali kutubxonalar
+argon2-cffi
+argon2-cffi-bindings
+attrs
+cryptography
+python-dotenv
+pytz
+sqlparse
